--- a/styles.css
+++ b/styles.css
@@ -114,3 +114,21 @@ p {
     margin-top: 30px;
     color: rgb(116, 116, 116);
 }
+
+
+/*---------Validation -----------------------------*/
+
+.error, .pw-error {
+    color: rgb(255, 0, 0);
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: smaller;
+    margin: 5px 0 0 5px;
+}
+
+.pw-error {
+    margin-bottom: 5px;
+}
+
+input:invalid {
+    outline: 2px solid red;
+}
