--- a/styles.css
+++ b/styles.css
@@ -118,17 +118,21 @@ p {
 
 /*---------Validation -----------------------------*/
 
-.error, .pw-error {
+.error {
     color: rgb(255, 0, 0);
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: smaller;
-    margin: 5px 0 0 5px;
+    margin: 5px;
 }
 
-.pw-error {
-    margin-bottom: 5px;
+/* input:invalid {
+    outline: 2px solid red;
+} */
+
+input:focus:invalid {
+    outline: none;
 }
 
-input:invalid {
+.invalid {
     outline: 2px solid red;
 }
